--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,62 @@
 body{
-    background-color: aliceblue;
+    background-color:antiquewhite;
 }
 
 h1 {
     font-size:xx-large;
     font-weight:bolder;
     font-style: italic;
+    padding:10pt;
+    border-style:groove;
+    border-width: 5pt;
+    text-align: center;
 }
 
 
 h2{
-    font-size:large;
-    
+
+    text-decoration-line: underline;
+    padding-inline-start: 1em;
+}
+
+#headshot{
+    width:100%;
+    float:right;
+    padding:1em;
+}
+
+#worktitle{
+    text-align: center;
+    padding: 1em;
+}
+
+.col{
+    padding:1pt;
+}
+
+.portfolio-pic{
+    width:100%;
+    padding:1em;
+}
+
+.text{
+    padding:1em;
+}
+
+.page-link{
+    padding-inline-start:2em;
+}
+
+a{
+    color:blue;
+}
+
+.border{
+    border-width:3pt;
+    border-style:solid;
+    margin-top: 1em;
+}
+
+.hidden{
+    display:none;
 }
